--- a/phoenix_static_buildpack.config
+++ b/phoenix_static_buildpack.config
@@ -8,7 +8,7 @@ node_version=6.2.0
 npm_version=3.8.9
 
 # Add the config vars you want to be exported here
-config_vars_to_export=(DATABASE_URL FB_PAGE_ACCESS_TOKEN)
+config_vars_to_export=(DATABASE_URL)
 
 # We can change the filename for the compile script with this option
 compile="compile"
